--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "typescript": "~5.6.2",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-string": "^1.2.3"
   },
   "dependencies": {
     "@types/three": "^0.175.0",
+    "@webgpu/types": "^0.1.60",
     "three": "^0.175.0"
   }
 }
