--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* WebGPU */
+    "types": ["@webgpu/types"]
   },
   "include": ["src"]
 }
