--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^6.2.3",
+    "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-string": "^1.2.3"
   },
   "dependencies": {
